fix: align mail pagination padding with thread list (0 1rem)

--- a/client/src/styles/_mail.scss
+++ b/client/src/styles/_mail.scss
@@ -264,6 +264,11 @@
   padding: 0 1rem;
 }
 
+.thread-list + .cds--pagination,
+.mail-page .cds--pagination {
+  padding: 0 1rem;
+}
+
 .thread-item {
   display: block;
   width: 100%;
